--- a/src/Blanquita.Web/Components/Pages/Login.razor
+++ b/src/Blanquita.Web/Components/Pages/Login.razor
@@ -106,7 +106,7 @@
         {
             errorMessage = error.ToString() switch
             {
-                "InvalidCredentials" => "Credenciales incorrectas",
+                "CredencialesInvalidas" => "Credenciales incorrectas",
                 "DatosRequeridos" => "Por favor complete todos los campos",
                 _ => "Error desconocido al iniciar sesión"
             };
