--- a/src/Blanquita.Web/Components/Dialogs/DialogoSucursal.razor
+++ b/src/Blanquita.Web/Components/Dialogs/DialogoSucursal.razor
@@ -14,6 +14,13 @@
                          RequiredError="El nombre es obligatorio" 
                          Variant="Variant.Outlined" 
                          Class="mb-3" />
+
+            <MudTextField @bind-Value="Model.Code" 
+                         Label="Código" 
+                         Required="true" 
+                         RequiredError="El código es obligatorio" 
+                         Variant="Variant.Outlined" 
+                         Class="mb-3" />
             
             <MudTextField @bind-Value="Model.SeriesCliente" 
                          Label="Serie Clientes" 
